--- a/Dockerfile.fastapi
+++ b/Dockerfile.fastapi
@@ -2,10 +2,10 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
-COPY requirements_api.txt .
+ADD requirements_api.txt .
 
 # Install the dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements_api.txt
 
 COPY . .
 
