--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -79,8 +79,8 @@ x-airflow-common:
     - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
     - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
     - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
-    - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
-    - ${AIRFLOW_PROJ_DIR:-.}/data:/opt/airflow/mlruns
+    - ${AIRFLOW_PROJ_DIR:-.}/model:/opt/airflow/model
+    - ${AIRFLOW_PROJ_DIR:-.}/mlruns:/opt/airflow/mlruns
 
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
